--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#10683a</color>
+    <color name="stone_100">#f5f5f4</color>
+    <color name="gray_600">#4b5563</color>
 </resources>
