--- a/app/src/main/res/layout/register_dialog.xml
+++ b/app/src/main/res/layout/register_dialog.xml
@@ -63,6 +63,7 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:paddingBottom="5dp"
         android:text="Show password"
         android:textColor="@color/gray_600"
         android:textColorHint="@color/gray_600"
