--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginTop="4dp"
+            android:paddingBottom="5dp"
             android:text="Show password"
             android:textColor="@color/gray_600" />
 
@@ -70,14 +71,16 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textColorHint="@color/gray_600"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/account_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
         android:text="Create an account"
         android:textColor="@color/gray_600"
         android:textSize="14sp"
