--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dialog_horizontal_margin">24dp</dimen>
     <dimen name="dialog_vertical_margin">24dp</dimen>
+    <dimen name="replyDimen">40dp</dimen>
 </resources>
