--- a/app/src/main/res/layout/register_dialog.xml
+++ b/app/src/main/res/layout/register_dialog.xml
@@ -7,17 +7,31 @@
     android:background="@color/stone_100"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/reg_message_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:paddingStart="20dp"
+        android:paddingTop="14dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="14dp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/reg_firstName"
+        app:layout_constraintEnd_toEndOf="@+id/reg_firstName"
+        app:layout_constraintStart_toStartOf="@+id/reg_firstName" />
+
     <EditText
         android:id="@+id/reg_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="42dp"
         android:background="@drawable/edit_text_bg"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="text"
+        android:inputType="text|textEmailAddress"
         android:padding="14dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
@@ -25,6 +39,50 @@
         android:textColorHint="@color/gray_600"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_lastName" />
+
+    <EditText
+        android:id="@+id/reg_lastName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="42dp"
+        android:background="@drawable/edit_text_bg"
+        android:ems="10"
+        android:hint="Last Name"
+        android:inputType="text|textCapWords"
+        android:padding="14dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textColor="@color/gray_600"
+        android:textColorHint="@color/gray_600"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_firstName" />
+
+    <EditText
+        android:id="@+id/reg_firstName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="42dp"
+        android:background="@drawable/edit_text_bg"
+        android:ems="10"
+        android:hint="First Name"
+        android:inputType="text|textCapWords"
+        android:padding="14dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textColor="@color/gray_600"
+        android:textColorHint="@color/gray_600"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
