--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -122,14 +122,50 @@
                     android:text="Comments"
                     android:textColor="@color/gray_600"
                     android:textSize="18sp"
+                    android:layout_marginBottom="10dp"
                     android:textStyle="bold" />
                 <LinearLayout
                     android:background="@drawable/card_bg"
+                    android:layout_marginBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:id="@+id/comment_section">
 
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/article_comment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/edit_text_bg"
+                        android:ems="10"
+                        android:hint="Comment.."
+                        android:inputType="textMultiLine"
+                        android:padding="14dp"
+                        android:paddingStart="20dp"
+                        android:paddingEnd="20dp"
+                        android:textColor="@color/gray_600"
+                        android:textColorHint="@color/gray_600"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/send_button"
+                        android:layout_gravity="end"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/log_in_bg"
+                        android:paddingStart="20dp"
+                        android:paddingTop="12dp"
+                        android:paddingEnd="20dp"
+                        android:paddingBottom="12dp"
+                        android:text="Send"
+                        android:textColor="@color/white" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
