--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="green">#10683a</color>
     <color name="stone_100">#f5f5f4</color>
     <color name="gray_600">#4b5563</color>
+    <color name="gray_800">#1f2937</color>
     <color name="message_green">#4ade80</color>
     <color name="message_lightGreen">#dcfce7</color>
     <color name="message_lightRed">#fee2e2</color>
